--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "eslint-plugin-cypress": "^2.11.3",
     "eslint-plugin-import": "^2.24.2",
     "mocha": "^9.1.2",
-    "prettier": "2.3.2"
+    "prettier": "^2.3.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
