Refactored code using knowledge from todo app

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,6 +8,7 @@
     "ecmaVersion": 12
   },
   "rules": {
-    "no-shadow": "off"
+    "no-shadow": "off",
+    "import/prefer-default-export": "off"
   }
 }
